tests/baselines/reference/parserAccessors10(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
parserAccessors10.ts(2,3): error TS1042: 'public' modifier cannot be used here.
parserAccessors10.ts(2,14): error TS2378: A 'get' accessor must return a value.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== parserAccessors10.ts (2 errors) ====
    var v = {
      public get foo() { }
      ~~~~~~
!!! error TS1042: 'public' modifier cannot be used here.
                 ~~~
!!! error TS2378: A 'get' accessor must return a value.
    };